# cs50w

./: .gitignore  README.md  pyproject.toml
commerce/auctions/: admin.py  forms.py  models.py  urls.py  views.py
commerce/auctions/migrations/: 0001_initial.py  0002_alter_commentary_listing_alter_commentary_user_and_more.py  0003_alter_commentary_listing_alter_commentary_user_and_more.py
commerce/auctions/static/auctions/: styles.css
commerce/auctions/templates/auctions/: category.html  create_listing.html  index.html  layout.html  listing.html  watchlist.html
commerce/commerce/: settings.py
mail/mail/: admin.py
mail/mail/migrations/: 0001_initial.py
mail/mail/static/mail/: inbox.js
project4/network/: models.py  urls.py  views.py
project4/network/migrations/: 0001_initial.py  0002_post_comment.py  0003_user_following_list.py  0004_alter_post_likes.py
project4/network/static/network/: index.js  styles.css
project4/network/templates/network/: index.html  layout.html  post_list.html  profile.html
project4/project4/: settings.py
search/: advanced_search.html  image_search.html  index.html
search/css/: google.css
wiki/: README.md
wiki/encyclopedia/: urls.py  views.py
wiki/encyclopedia/templates/encyclopedia/: edit_create_entry.html  error_page_already_exists.html  layout.html  search.html  wiki_page.html
wiki/entries/: CSS.md  Java.md  Test.md
