[tool.poetry]
name = "python-web-harvard"
version = "0.1.0"
description = "Projects for python web harvard course"
authors = ["Vinícius José Pierri Nogueira"]
readme = "README.md"
packages = [{include = "python_web_harvard"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.7"
markdown2 = "^2.4.13"
pillow = "^10.4.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
